--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "jest": "^29.7.0",
     "jest-extended": "^4.0.2",
+    "jest-sorted": "^1.0.14",
     "supertest": "^6.3.3"
   },
   "name": "codecrafters-be",
@@ -29,7 +30,8 @@
   "description": "",
   "jest": {
     "setupFilesAfterEnv": [
-      "jest-extended/all"
+      "jest-extended/all",
+      "jest-sorted"
     ]
   }
 }
