--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jest-sorted": "^1.0.14",
     "pg": "^8.11.3",
     "pg-format": "^1.0.4",
     "superset": "^2.0.1"
@@ -29,7 +30,8 @@
   "description": "",
   "jest": {
     "setupFilesAfterEnv": [
-      "jest-extended/all"
+      "jest-extended/all",
+      "jest-sorted"
     ]
   }
 }
